{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 20,
  "lineage": "2d554ebc-0077-df67-5652-5d0e37317502",
  "resources": [
    {
      "module": "module.db_ec2",
      "mode": "managed",
      "type": "aws_eip",
      "name": "db_server_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09a0350abc6557408",
            "arn": "arn:aws:ec2:ap-northeast-2:317164914199:elastic-ip/eipalloc-09a0350abc6557408",
            "domain": "vpc",
            "id": "eipalloc-09a0350abc6557408",
            "network_border_group": "ap-northeast-2",
            "public_dns": "ec2-3-37-91-225.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.37.91.225",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.db_ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "db_server_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d5bb3742db8fc264",
            "arn": "arn:aws:ec2:ap-northeast-2:317164914199:instance/i-072553eccadd4554a",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-072553eccadd4554a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "whs_ocsf_logrrr",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-032d5cfa129efb0c2",
            "private_dns": "ip-10-0-2-184.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.184",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:ap-northeast-2:317164914199:key/b5b63082-4503-4bcd-b862-a91db1381805",
                "throughput": 125,
                "volume_id": "vol-038f0ab6ceb90ced9",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06d2c52ceddffba55",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01028c796f3546596"
            ]
          },
          "dependencies": [
            "module.db_ec2.aws_security_group.db_server_sg",
            "module.vpc.aws_subnet.public_subnet_02",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.db_ec2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_server_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:317164914199:security-group/sg-01028c796f3546596",
            "description": "DB Server Security Group",
            "egress": [],
            "id": "sg-01028c796f3546596",
            "ingress": [],
            "name": "WHS-Logrrr-db-sg",
            "name_prefix": "",
            "owner_id": "317164914199",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0252d958078d896bb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.db_ec2",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "db_out_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:317164914199:security-group-rule/sgr-0449a7bd16738511b",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0449a7bd16738511b",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-01028c796f3546596",
            "security_group_rule_id": "sgr-0449a7bd16738511b",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.db_ec2.aws_security_group.db_server_sg",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.db_ec2",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "db_in_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:317164914199:security-group-rule/sgr-00713e46cf60f9155",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-00713e46cf60f9155",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-01028c796f3546596",
            "security_group_rule_id": "sgr-00713e46cf60f9155",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.db_ec2.aws_security_group.db_server_sg",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:317164914199:internet-gateway/igw-0c4eeaf2d176eb137",
            "id": "igw-0c4eeaf2d176eb137",
            "owner_id": "317164914199",
            "tags": {
              "Name": "WHS-Logrrr-internet-gateway"
            },
            "tags_all": {
              "Name": "WHS-Logrrr-internet-gateway"
            },
            "vpc_id": "vpc-0252d958078d896bb"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:317164914199:route-table/rtb-0588df83d88e40fc8",
            "id": "rtb-0588df83d88e40fc8",
            "owner_id": "317164914199",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c4eeaf2d176eb137",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "WHS-Logrrr-public-route"
            },
            "tags_all": {
              "Name": "WHS-Logrrr-public-route"
            },
            "timeouts": null,
            "vpc_id": "vpc-0252d958078d896bb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_public_subnet_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01f48d290710503e9",
            "route_table_id": "rtb-0588df83d88e40fc8",
            "subnet_id": "subnet-082f75b7198e36dcf"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_route_table.route_table",
            "module.vpc.aws_subnet.public_subnet_01",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_public_subnet_02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09b5cdce43ed2791f",
            "route_table_id": "rtb-0588df83d88e40fc8",
            "subnet_id": "subnet-06d2c52ceddffba55"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_route_table.route_table",
            "module.vpc.aws_subnet.public_subnet_02",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:317164914199:subnet/subnet-082f75b7198e36dcf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-082f75b7198e36dcf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "317164914199",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "WHS-Logrrr-public-subnet-01",
              "Type": "Public"
            },
            "tags_all": {
              "Name": "WHS-Logrrr-public-subnet-01",
              "Type": "Public"
            },
            "vpc_id": "vpc-0252d958078d896bb"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:317164914199:subnet/subnet-06d2c52ceddffba55",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06d2c52ceddffba55",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "317164914199",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "WHS-Logrrr-public-subnet-02",
              "Type": "Public"
            },
            "tags_all": {
              "Name": "WHS-Logrrr-public-subnet-02",
              "Type": "Public"
            },
            "vpc_id": "vpc-0252d958078d896bb"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:317164914199:vpc/vpc-0252d958078d896bb",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d79539dfa8e4debe",
            "default_route_table_id": "rtb-0f4189b941f85f5ff",
            "default_security_group_id": "sg-03158cc0334682193",
            "dhcp_options_id": "dopt-05499e3ed934c9155",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0252d958078d896bb",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f4189b941f85f5ff",
            "owner_id": "317164914199",
            "tags": {
              "Name": "WHS-Logrrr-VPC"
            },
            "tags_all": {
              "Name": "WHS-Logrrr-VPC"
            }
          }
        }
      ]
    },
    {
      "module": "module.web_ec2",
      "mode": "managed",
      "type": "aws_eip",
      "name": "web_server_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b7f53d71fdf672b0",
            "arn": "arn:aws:ec2:ap-northeast-2:317164914199:elastic-ip/eipalloc-0b7f53d71fdf672b0",
            "domain": "vpc",
            "id": "eipalloc-0b7f53d71fdf672b0",
            "network_border_group": "ap-northeast-2",
            "public_dns": "ec2-52-79-211-114.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "52.79.211.114",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.web_ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_server_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d5bb3742db8fc264",
            "arn": "arn:aws:ec2:ap-northeast-2:317164914199:instance/i-0f95d49a8b4d41a09",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f95d49a8b4d41a09",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "whs_ocsf_logrrr",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-082c02935a60a401e",
            "private_dns": "ip-10-0-1-228.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.228",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:ap-northeast-2:317164914199:key/b5b63082-4503-4bcd-b862-a91db1381805",
                "throughput": 125,
                "volume_id": "vol-0410dbaf5f91bd58d",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-082f75b7198e36dcf",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0dd90b879f838dba9"
            ]
          },
          "dependencies": [
            "module.vpc.aws_subnet.public_subnet_01",
            "module.vpc.aws_vpc.vpc",
            "module.web_ec2.aws_eip.web_server_eip",
            "module.web_ec2.aws_security_group.web_server_sg"
          ]
        }
      ]
    },
    {
      "module": "module.web_ec2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_server_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:317164914199:security-group/sg-0dd90b879f838dba9",
            "description": "Web Server Security Group",
            "egress": [],
            "id": "sg-0dd90b879f838dba9",
            "ingress": [],
            "name": "WHS-Logrrr-web-server-sg",
            "name_prefix": "",
            "owner_id": "317164914199",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0252d958078d896bb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.web_ec2",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "web_out_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:317164914199:security-group-rule/sgr-045fdd6938d9490a8",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-045fdd6938d9490a8",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0dd90b879f838dba9",
            "security_group_rule_id": "sgr-045fdd6938d9490a8",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.web_ec2.aws_security_group.web_server_sg"
          ]
        }
      ]
    },
    {
      "module": "module.web_ec2",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "web_in_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:317164914199:security-group-rule/sgr-0b540ea2b637c722a",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0b540ea2b637c722a",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0dd90b879f838dba9",
            "security_group_rule_id": "sgr-0b540ea2b637c722a",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.web_ec2.aws_security_group.web_server_sg"
          ]
        }
      ]
    }
  ]
}